added promotion-details endpoint
