# src/main/java/com/mastercard/developer/controller/OptInController.java
@@ -37,13 +37,13 @@ public class OptInController {
     /*---------------------------------------------------------------- Post PromotionOptIn API -------------------------------------------------------*/
 
     /**
-     * promotionOptIn API Call
-     * Post promotionOptIn for Cardholder.
-     *
-     * @param optInCreateValueBeanList request (required)
-     * @return ApiResponse;
-     * @throws InvalidRequest If fail to parse input payload and fails to validate input values
-     */
+ *      * promotionOptIn API Call
+ *           * Post promotionOptIn for Cardholder.
+ *                *
+ *                     * @param optInCreateValueBeanList request (required)
+ *                          * @return ApiResponse;
+ *                               * @throws InvalidRequest If fail to parse input payload and fails to validate input values
+ *                                    */
 
     @PostMapping(consumes = {"application/json"}, value = {"/promotion-activations"})
     public ResponseEntity<Void> promotionOptIn(@RequestBody List<OptIn> optInCreateValueBeanList) {
@@ -62,23 +62,23 @@ public class OptInController {
     /*---------------------------------------------------------------- GET ActivePromotion API -------------------------------------------------------*/
 
     /**
-     * Build call for getActivePromotion
-     *
-     * @param rewardsCompanyId Rewards Company Identifier (required)
-     * @param programId        Program Identifier (required)
-     * @param accountId        Cardholder Identifier such as BCN, BAN (optional)
-     * @param promotionState   Promotion State such as all, current, future, expired, future+current (optional)
-     * @param offset           The number of items to offset the start of the list from (optional, default to 0)
-     * @param limit            The number of items you want the list to be limited to (optional, default to 25)
-     * @return Call to execute
-     * @throws InvalidRequest If fail to validate input values and serialize the request body object
-     */
+ *      * Build call for getActivePromotion
+ *           *
+ *                * @param rewardsCompanyId Rewards Company Identifier (required)
+ *                     * @param programId        Program Identifier (required)
+ *                          * @param accountId        Cardholder Identifier such as BCN, BAN (optional)
+ *                               * @param promotionState   Promotion State such as all, current, future, expired, future+current (optional)
+ *                                    * @param offset           The number of items to offset the start of the list from (optional, default to 0)
+ *                                         * @param limit            The number of items you want the list to be limited to (optional, default to 25)
+ *                                              * @return Call to execute
+ *                                                   * @throws InvalidRequest If fail to validate input values and serialize the request body object
+ *                                                        */
     @GetMapping(value = "/promotions")
-    public Promotions getPromotions(@RequestParam(name = "rewardsCompanyId", required = false) String rewardsCompanyId, @RequestParam(name = "programId", required = false) String programId, @RequestParam(name = "accountId", required = false) String accountId, @RequestParam(name = "promotion_state", required = false) String promotionState, @RequestParam(name = "offset", required = false, defaultValue = "0") Integer offset, @RequestParam(name = "limit", required = false, defaultValue = "25") Integer limit) {
-        optInValidator.validateGetPromotions(rewardsCompanyId, programId, accountId);
+    public Promotions getPromotions(@RequestParam(name = "rewardsCompanyId", required = false) String rewardsCompanyId, @RequestParam(name = "programId", required = false) String programId, @RequestParam(name = "promotionId", required = false) String promotionId, @RequestParam(name = "accountId", required = false) String accountId, @RequestParam(name = "promotion_state", required = false) String promotionState, @RequestParam(name = "offset", required = false, defaultValue = "0") Integer offset, @RequestParam(name = "limit", required = false, defaultValue = "25") Integer limit) {
+        optInValidator.validateGetPromotions(rewardsCompanyId, programId, promotionId, accountId);
         try {
             log.info("Method : getActivePromotions, Message : Getting promotions");
-            Promotions response = optInService.getActivePromotions(rewardsCompanyId, programId, accountId, promotionState, offset, limit);
+            Promotions response = optInService.getActivePromotions(rewardsCompanyId, programId, promotionId, accountId, promotionState, offset, limit);
             if (response != null) {
                 log.debug("Method : getPromotions, Message :Successfully got the promotions" + response);
                 return response;
@@ -95,3 +95,4 @@ public class OptInController {
         throw new InvalidRequest(HttpStatus.BAD_REQUEST);
     }
 }
+
